--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,6 @@ img {
     border-radius: 5px;
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
-    font-size: 1.5em;
     transition: 0.1s;
 }
 
@@ -151,10 +150,10 @@ body .icone-text {
 }
 
 .nav-menu a {
-    font-size: 1.5em;
     color: #023A4F;
     padding: 16px 24px 16px 24px;
     transition: 0.1s;
+    font-size: 1.2em;
 }
 
 .nav-menu a:hover {
@@ -674,7 +673,7 @@ footer p a {
         margin-right: 16px;
     }
     .contato {
-        margin-top: 120px;
+        margin-top: 100px;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-areas: 'social-media';
@@ -742,6 +741,9 @@ footer p a {
         align-self: flex-start;
         margin-top: 40px;
         margin-bottom: 60px;
+    }
+    body .intro .p-intro {
+        font-size: 0.875em;
     }
     .intro .btn {
         font-size: 1em;
@@ -954,6 +956,9 @@ footer p a {
     /*MOBILE MENU*/
     [data-dropdown] {
         position: relative;
+    }
+    [data-dropdown] .dropdown-menu {
+        display: none;
     }
     [data-dropdown]:hover .dropdown-menu,
     [data-dropdown].active .dropdown-menu {
