--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,17 @@ body .icone-text {
     line-height: 1.3em;
 }
 
+body .sobre-mim .hyperlink-texto {
+    text-decoration: none;
+    font-weight: 600;
+    color: #045A79;
+    transition: 0.2s;
+}
+
+body .sobre-mim .hyperlink-texto:hover {
+    color: #E4A30B;
+}
+
 .info-text {
     margin-left: 16px;
     font-size: 1.2em;
@@ -102,7 +113,7 @@ body .icone-text {
 
 .box-anime {
     opacity: 0;
-    transition: .3s;
+    transition: .2s;
 }
 
 .box-anime.ativo {
@@ -509,6 +520,7 @@ body .icone-text {
 .sobre-footer p {
     font-size: 1em;
     margin-left: 0px;
+    line-height: 1.5em;
     max-width: 250px;
 }
 
@@ -589,19 +601,20 @@ footer p a {
         grid-area: texto;
         max-width: 370px;
     }
-    body .sobre-atendimentos p {
+    body .sobre-atendimentos .sobre-content p {
         margin-top: 12px;
+        max-width: 370px;
+        margin-right: 0px;
     }
     body .sobre-atendimentos ul {
         max-width: 300px;
         display: flex;
     }
-    body .sobre-atendimentos span {
-        margin-top: 20px;
-        margin-left: 8px;
-    }
     body .icone-atendimentos {
         max-width: 24px;
+    }
+    body .sobre-atendimentos .sobre-atendimentos-icons span {
+        margin-left: 8px;
     }
     body .sobre-atendimentos .icone-text {
         font-size: 1em;
@@ -623,9 +636,6 @@ footer p a {
         padding-top: 60px;
         padding-bottom: 20px;
     }
-    body .sobre-mim p {
-        min-width: 320px;
-    }
     .camera-fotografica {
         margin-left: 280px;
     }
@@ -637,7 +647,7 @@ footer p a {
         margin-top: 140px;
     }
     .sobre-mim .decorador-azul {
-        margin-top: -500px;
+        margin-top: -570px;
         margin-left: -100px;
     }
     body .sobre-mim .break {
@@ -767,9 +777,6 @@ footer p a {
         width: auto;
         height: 40vw;
         margin: 0 auto;
-    }
-    body .sobre-atendimentos .sobre-content p {
-        margin: 20px auto;
     }
     body .sobre-atendimentos .decorador-amarelo-escuro1 {
         position: absolute;
