--- a/css/style.css
+++ b/css/style.css
@@ -690,7 +690,7 @@ footer p a {
         grid-template-areas: 'social-media';
     }
     .contato .h1-contato {
-        margin-bottom: 40px;
+        margin-bottom: 24px;
     }
     .contato .social-media {
         max-width: 340px;
@@ -920,11 +920,11 @@ footer p a {
         padding: 56px;
         max-width: 220px;
     }
-    body .contato .social-media h1 {
-        margin-bottom: 32px;
-    }
     body .contato .social-media li+li {
         margin-top: 24px;
+    }
+    body .contato .h1-contato {
+        margin-bottom: 12px;
     }
     body .contato .social-media p {
         min-width: 210px;
